Sun Jul 27 03:32:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - QTabWidget's currentPageIndex() doesn't actually return the
	    index as the name suggests. It returns a unique ID. Worked
	    around this to return the page's actual current index.

Sun Jul 27 03:01:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/main.cpp:
	  - The gaim core is now initialized through the new gaim_core API.

Sun Jul 27 02:24:45 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - The QGaimConvButton class registering and unregistering the
	    conversation signal handlers now passes itself as the module
	    handle, so that the handlers are unique to it.

Sun Jul 27 02:12:46 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - The conversation new/delete signal callbacks are now unregistered
	    when a conversations list button is destroyed.

Sun Jul 27 02:10:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - Oh yeah, make qpe-gaim compile again.

Sun Jul 27 02:10:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Conversations can now be closed.

Tue Jul 15 01:23:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Added the new buttons to the conversation window.

Tue Jul 15 00:32:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/block.png:
	* data/images/close_conv.png:
	* data/images/formatting.png:
	* data/images/smileys.png:
	* data/images/warn.png:
	* gaim.pro:
	  - Added block, close conversation, formatting, smileys, and warn
	    button images.

Tue Jul 15 00:24:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Removed the menubar in the conversation window and made the